--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
   <meta name="description " content="{{ page.description  }}">
 {% endif %}
 
-<link rel="shortcut icon" href="{{ site.favicon }}" />
+<!-- <link rel="shortcut icon" href="{{ site.favicon }}" /> -->
 
 <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 
