--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,5 +8,5 @@ layout: base
 </article> <!-- end #post__content -->
 
 {% include share.html %}
-{% include disqus.html %}
+{% include duoshuo.html %}
 
